feat: update fancybox popup on project page

--- a/project.html
+++ b/project.html
@@ -187,68 +187,140 @@
 			</section>
 
 <!-- WORKS -->
-			<!-- <section id="works" class="b-works flex-images"> -->
-			<section id="works" class="b-works flex-gall">
-				<a class="" data-fancybox data-src="#project1" href="javascript://">
-					<img src="images/author/1.jpg">
-				</a>
-				<a class="" data-fancybox data-src="#project1" href="javascript://">
-					<img src="images/author/2.jpg">
-				</a>
-				<a class="" data-fancybox data-src="#project1" href="javascript://">
-					<img src="images/author/3.jpg">
-				</a>
-				<a class="" data-fancybox data-src="#project1" href="javascript://">
-					<img src="images/author/5.jpg">
-				</a>
-				<a class="" data-fancybox data-src="#project1" href="javascript://">
-					<img src="images/author/7.jpg">
-				</a>
-				<a class="" data-fancybox data-src="#project1" href="javascript://">
-					<img src="images/author/1.jpg">
-				</a>
-				<a class="" data-fancybox data-src="#project1" href="javascript://">
-					<img src="images/author/2.jpg">
-				</a>
-				<a class="" data-fancybox data-src="#project1" href="javascript://">
-					<img src="images/author/3.jpg">
-				</a>
-				<a class="" data-fancybox data-src="#project1" href="javascript://">
-					<img src="images/author/5.jpg">
-				</a>
-				<a class="" data-fancybox data-src="#project1" href="javascript://">
-					<img src="images/author/7.jpg">
-				</a>
-				<a class="" data-fancybox data-src="#project1" href="javascript://">
-					<img src="images/author/1.jpg">
-				</a>
-				<a class="" data-fancybox data-src="#project1" href="javascript://">
-					<img src="images/author/2.jpg">
-				</a>
-				<a class="" data-fancybox data-src="#project1" href="javascript://">
-					<img src="images/author/3.jpg">
-				</a>
-				<a class="" data-fancybox data-src="#project1" href="javascript://">
-					<img src="images/author/5.jpg">
-				</a>
-				<a class="" data-fancybox data-src="#project1" href="javascript://">
-					<img src="images/author/7.jpg">
-				</a>
-				<a class="" data-fancybox data-src="#project1" href="javascript://">
-					<img src="images/author/1.jpg">
-				</a>
-				<a class="" data-fancybox data-src="#project1" href="javascript://">
-					<img src="images/author/2.jpg">
-				</a>
-				<a class="" data-fancybox data-src="#project1" href="javascript://">
-					<img src="images/author/3.jpg">
-				</a>
-				<a class="" data-fancybox data-src="#project1" href="javascript://">
-					<img src="images/author/5.jpg">
-				</a>
-			</section>
+            <section id="works" class="b-works flex-gall">
+                <a href="images/author/1.jpg" data-fancybox="group" data-caption='
+                    <div class="project-description">
+                        <div class="title">Сказка о мертвой царевне и о семи богатырях 1</div>
+                        <a href="#" class="author">Юлдуз Бахтиозина</a>
+                        <div class="expand">
+                            <div class="info">Фотография, пленка, цифровая печать 1/7 , 100х120 мм 2014</div>
+                            <div class="project-name">Проект: <a href="#">Russ land</a></div>
+                            <ul class="project-social">
+                                <li class="vk"><a href="https://vk.com/annanovagallery"></a></li>
+                                <li class="fb"><a href="https://www.facebook.com/annanova.artgallery/"></a></li>
+                                <li class="telegram"><a href="https://t.me/annanovagallery"></a></li>
+                            </ul>
+                        </div>
+                    </div>
+                '>
+                    <img src="images/author/1.jpg">
+                </a>
+                <a href="images/author/2.jpg" data-fancybox="group" data-caption='
+                    <div class="project-description">
+                        <div class="title">Сказка о мертвой царевне и о семи богатырях 2</div>
+                        <a href="#" class="author">Юлдуз Бахтиозина</a>
+                        <div class="expand">
+                            <div class="info">Фотография, пленка, цифровая печать 1/7 , 100х120 мм 2014</div>
+                            <div class="project-name">Проект: <a href="#">Russ land</a></div>
+                            <ul class="project-social">
+                                <li class="vk"><a href="https://vk.com/annanovagallery"></a></li>
+                                <li class="fb"><a href="https://www.facebook.com/annanova.artgallery/"></a></li>
+                                <li class="telegram"><a href="https://t.me/annanovagallery"></a></li>
+                            </ul>
+                        </div>
+                    </div>
+                '>
+                    <img src="images/author/2.jpg">
+                </a>
+                <a href="images/author/3.jpg" data-fancybox="group" data-caption='
+                    <div class="project-description">
+                        <div class="title">Сказка о мертвой царевне и о семи богатырях 3</div>
+                        <a href="#" class="author">Юлдуз Бахтиозина</a>
+                        <div class="expand">
+                            <div class="info">Фотография, пленка, цифровая печать 1/7 , 100х120 мм 2014</div>
+                            <div class="project-name">Проект: <a href="#">Russ land</a></div>
+                            <ul class="project-social">
+                                <li class="vk"><a href="https://vk.com/annanovagallery"></a></li>
+                                <li class="fb"><a href="https://www.facebook.com/annanova.artgallery/"></a></li>
+                                <li class="telegram"><a href="https://t.me/annanovagallery"></a></li>
+                            </ul>
+                        </div>
+                    </div>
+                '>
+                    <img src="images/author/3.jpg">
+                </a>
+                <a href="images/author/5.jpg" data-fancybox="group" data-caption='
+                    <div class="project-description">
+                        <div class="title">Сказка о мертвой царевне и о семи богатырях 4</div>
+                        <a href="#" class="author">Юлдуз Бахтиозина</a>
+                        <div class="expand">
+                            <div class="info">Фотография, пленка, цифровая печать 1/7 , 100х120 мм 2014</div>
+                            <div class="project-name">Проект: <a href="#">Russ land</a></div>
+                            <ul class="project-social">
+                                <li class="vk"><a href="https://vk.com/annanovagallery"></a></li>
+                                <li class="fb"><a href="https://www.facebook.com/annanova.artgallery/"></a></li>
+                                <li class="telegram"><a href="https://t.me/annanovagallery"></a></li>
+                            </ul>
+                        </div>
+                    </div>
+                '>
+                    <img src="images/author/5.jpg">
+                </a>
+                <a href="images/author/7.jpg" data-fancybox="group" data-caption='
+                    <div class="project-description">
+                        <div class="title">Сказка о мертвой царевне и о семи богатырях 5</div>
+                        <a href="#" class="author">Юлдуз Бахтиозина</a>
+                        <div class="expand">
+                            <div class="info">Фотография, пленка, цифровая печать 1/7 , 100х120 мм 2014</div>
+                            <div class="project-name">Проект: <a href="#">Russ land</a></div>
+                            <ul class="project-social">
+                                <li class="vk"><a href="https://vk.com/annanovagallery"></a></li>
+                                <li class="fb"><a href="https://www.facebook.com/annanova.artgallery/"></a></li>
+                                <li class="telegram"><a href="https://t.me/annanovagallery"></a></li>
+                            </ul>
+                        </div>
+                    </div>
+                '>
+                    <img src="images/author/7.jpg">
+                </a>
+                <a href="images/author/1.jpg" data-fancybox="group" data-caption="Caption #1">
+                    <img src="images/author/1.jpg">
+                </a>
+                <a href="images/author/2.jpg" data-fancybox="group" data-caption="Caption #2">
+                    <img src="images/author/2.jpg">
+                </a>
+                <a href="images/author/3.jpg" data-fancybox="group" data-caption="Caption #3">
+                    <img src="images/author/3.jpg">
+                </a>
+                <a href="images/author/5.jpg" data-fancybox="group" data-caption="Caption #5">
+                    <img src="images/author/5.jpg">
+                </a>
+                <a href="images/author/7.jpg" data-fancybox="group" data-caption="Caption #7">
+                    <img src="images/author/7.jpg">
+                </a>
+                <a href="images/author/1.jpg" data-fancybox="group" data-caption="Caption #1">
+                    <img src="images/author/1.jpg">
+                </a>
+                <a href="images/author/2.jpg" data-fancybox="group" data-caption="Caption #2">
+                    <img src="images/author/2.jpg">
+                </a>
+                <a href="images/author/3.jpg" data-fancybox="group" data-caption="Caption #3">
+                    <img src="images/author/3.jpg">
+                </a>
+                <a href="images/author/5.jpg" data-fancybox="group" data-caption="Caption #5">
+                    <img src="images/author/5.jpg">
+                </a>
+                <a href="images/author/7.jpg" data-fancybox="group" data-caption="Caption #7">
+                    <img src="images/author/7.jpg">
+                </a>
+                <a href="images/author/1.jpg" data-fancybox="group" data-caption="Caption #1">
+                    <img src="images/author/1.jpg">
+                </a>
+                <a href="images/author/2.jpg" data-fancybox="group" data-caption="Caption #2">
+                    <img src="images/author/2.jpg">
+                </a>
+                <a href="images/author/3.jpg" data-fancybox="group" data-caption="Caption #3">
+                    <img src="images/author/3.jpg">
+                </a>
+                <a href="images/author/5.jpg" data-fancybox="group" data-caption="Caption #5">
+                    <img src="images/author/5.jpg">
+                </a>
+                <a href="images/author/7.jpg" data-fancybox="group" data-caption="Caption #7">
+                    <img src="images/author/7.jpg">
+                </a>
+            </section>
 
-		</div>
+        </div>
 
 <!-- GALERY -->
 		<section id="exposition" class="container">
@@ -375,6 +447,109 @@
 
 <!-- MAINJS -->
 <script src="assets/js/main.js"></script>
+<script type="text/javascript">
+  $(document).ready(function () {
+    $('[data-fancybox="group"]').fancybox({
+      buttons : [
+        'close'
+      ],
+      infobar : false,
+      idleTime : 0,
+      clickContent: false,
+      clickSlide : false,
+      afterShow: function() {
+        console.log('move');
+        var setPosition = function () {
+          var offsetImage,
+          heightImage,
+          widthDescription,
+          heightDescription,
+          windowHeight,
+          windowWidth;
+          windowHeight = $(window).height();
+          windowWidth = $(window).width();
+          if (windowWidth >= 768 && windowWidth <= 1279) {
+            $('.fancybox-image-wrap').css({left: '0px', top: '0px'});
+          } else if (windowWidth >= 1280 && windowWidth <= 2559) {
+            $('.fancybox-image-wrap').css({left: '160px', top: '0px'});
+          } else if (windowWidth >= 2560) {
+            $('.fancybox-image-wrap').css({left: '0px', top: '0px'});
+          }
+          offsetImage = $('.fancybox-container .fancybox-stage .fancybox-slide--current .fancybox-image-wrap .fancybox-image').offset();
+          heightImage = $('.fancybox-container .fancybox-stage .fancybox-slide--current .fancybox-image-wrap .fancybox-image').height();
+          widthDescription = $('.fancybox-container .fancybox-caption-wrap').outerWidth();
+          heightDescription = $('.fancybox-container .fancybox-caption-wrap').outerHeight();
+          // console.log('left', offsetImage.left);
+          // console.log('top', offsetImage.top);
+          // console.log('heightImage', heightImage);
+          // console.log('widthDescription', widthDescription);
+          // console.log('heightDescription', heightDescription);
+          // console.log('windowHeight', windowHeight);
+          // var ProjectDescription = $('.fancybox-caption-wrap').offset({ top: offsetImage.top + heightImage - heightDescription, left: offsetImage.left - widthDescription });
+          if (windowWidth <= 767) {
+            console.log('asd');
+            $('.fancybox-caption-wrap').css({ left: 0, bottom: 0, top: 'auto' });
+          }
+          if (windowWidth >= 768 && windowWidth <= 1279) {
+            if (((windowHeight - heightImage) / 2) < (heightDescription + 20)) {
+              $('.fancybox-image-wrap').css({ left: '0px', top: ((windowHeight - heightImage) / 2) - heightDescription - 20 });
+            }
+            var ProjectDescription = $('.fancybox-caption-wrap').css({ bottom: 0, left: (windowWidth - widthDescription) / 2, top: 'auto' });
+          } else if (windowWidth >= 1280 && windowWidth <= 2559) {
+            // $('.fancybox-image-wrap').css({left: '160px'});
+            var ProjectDescription = $('.fancybox-caption-wrap').css({ bottom: (windowHeight - heightImage) / 2, left: offsetImage.left - widthDescription - 20, top: 'auto' });
+          } else if (windowWidth >= 2560) {
+            // $('.fancybox-image-wrap').css({left: '0px'});
+            var ProjectDescription = $('.fancybox-caption-wrap').css({ bottom: (windowHeight - heightImage) / 2, left: offsetImage.left - widthDescription - 20, top: 'auto' });
+          }
+        }
+        setPosition();
+
+        $(window).resize(function() {
+          setTimeout(function () {
+            setPosition();
+          }, 250);
+        });
+      },
+      btnTpl: {
+        close: '<button data-fancybox-close class="fancybox-button fancybox-button--close" title="{{CLOSE}}">' +
+                 '<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 19 19"><style>.st0{fill:#111}</style><g transform="translate(-281 -20)"><g transform="translate(20 20)"><g transform="translate(261 .911)"><path transform="rotate(-45.001 9.327 8.912)" class="st0" d="M8.3-2.9h2v23.7h-2z"/><path transform="rotate(-45.001 9.481 8.756)" class="st0" d="M-2.4 7.8h23.7v2H-2.4z"/></g></g></g></svg>' +
+               '</button>',
+
+        arrowLeft: '<button data-fancybox-prev class="fancybox-button fancybox-button--arrow_left" title="{{PREV}}">' +
+                     '<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 30 30"><style>.st0{fill:#333}</style><title>Group 8</title><g><g transform="translate(-261 -2329)"><g transform="translate(-1 1165)"><g transform="translate(263 1165)"><path class="st0" d="M5.9 22.4l-1.8-.8L11.7 4h4.6l7.6 17.6-1.8.8L15 6h-2z" id="Page-1"/></g></g></g></g></svg>' +
+                   '</button>',
+
+        arrowRight: '<button data-fancybox-next class="fancybox-button fancybox-button--arrow_right" title="{{NEXT}}">' +
+                      '<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 30 30"><style>.st0{fill:#333}</style><title>Group 8</title><g><g transform="translate(-261 -2329)"><g transform="translate(-1 1165)"><g transform="translate(263 1165)"><path class="st0" d="M5.9 22.4l-1.8-.8L11.7 4h4.6l7.6 17.6-1.8.8L15 6h-2z" id="Page-1"/></g></g></g></g></svg>' +
+                    '</button>'
+      },
+      lang : 'ru',
+      i18n : {
+        'en' : {
+          CLOSE       : 'Close',
+          NEXT        : 'Next',
+          PREV        : 'Previous',
+          ERROR       : 'The requested content cannot be loaded. <br/> Please try again later.',
+          PLAY_START  : 'Start slideshow',
+          PLAY_STOP   : 'Pause slideshow',
+          FULL_SCREEN : 'Full screen',
+          THUMBS      : 'Thumbnails',
+          DOWNLOAD    : 'Download',
+          SHARE       : 'Share',
+          ZOOM        : 'Zoom'
+        },
+        'ru' : {
+          CLOSE       : 'Закрыть',
+          NEXT        : 'Следующий',
+          PREV        : 'Предыдущий',
+          ERROR       : 'Запрошенный контент не может быть загружен. <br/> Повторите попытку позже.'
+        },
+
+      }
+    });
+  });
+</script>
 
 	</body>
 </html>
