feat: update fancybox last-slide on project page

--- a/project.html
+++ b/project.html
@@ -273,51 +273,9 @@
                 '>
                     <img src="images/author/7.jpg">
                 </a>
-                <a href="images/author/1.jpg" data-fancybox="group" data-caption="Caption #1">
-                    <img src="images/author/1.jpg">
-                </a>
-                <a href="images/author/2.jpg" data-fancybox="group" data-caption="Caption #2">
-                    <img src="images/author/2.jpg">
-                </a>
-                <a href="images/author/3.jpg" data-fancybox="group" data-caption="Caption #3">
-                    <img src="images/author/3.jpg">
-                </a>
-                <a href="images/author/5.jpg" data-fancybox="group" data-caption="Caption #5">
-                    <img src="images/author/5.jpg">
-                </a>
-                <a href="images/author/7.jpg" data-fancybox="group" data-caption="Caption #7">
-                    <img src="images/author/7.jpg">
-                </a>
-                <a href="images/author/1.jpg" data-fancybox="group" data-caption="Caption #1">
-                    <img src="images/author/1.jpg">
-                </a>
-                <a href="images/author/2.jpg" data-fancybox="group" data-caption="Caption #2">
-                    <img src="images/author/2.jpg">
-                </a>
-                <a href="images/author/3.jpg" data-fancybox="group" data-caption="Caption #3">
-                    <img src="images/author/3.jpg">
-                </a>
-                <a href="images/author/5.jpg" data-fancybox="group" data-caption="Caption #5">
-                    <img src="images/author/5.jpg">
-                </a>
-                <a href="images/author/7.jpg" data-fancybox="group" data-caption="Caption #7">
-                    <img src="images/author/7.jpg">
-                </a>
-                <a href="images/author/1.jpg" data-fancybox="group" data-caption="Caption #1">
-                    <img src="images/author/1.jpg">
-                </a>
-                <a href="images/author/2.jpg" data-fancybox="group" data-caption="Caption #2">
-                    <img src="images/author/2.jpg">
-                </a>
-                <a href="images/author/3.jpg" data-fancybox="group" data-caption="Caption #3">
-                    <img src="images/author/3.jpg">
-                </a>
-                <a href="images/author/5.jpg" data-fancybox="group" data-caption="Caption #5">
-                    <img src="images/author/5.jpg">
-                </a>
-                <a href="images/author/7.jpg" data-fancybox="group" data-caption="Caption #7">
-                    <img src="images/author/7.jpg">
-                </a>
+                <!-- last slide -->
+                <a data-fancybox="group" data-type="iframe" data-src="last-slide.html" href="javascript:;"></a>
+
             </section>
 
         </div>
