фиксы стилей п задачам из asana

--- a/author.html
+++ b/author.html
@@ -407,6 +407,10 @@
 					<div class="item last">&nbsp;</div>
 				</div>
 			</div>
+
+			<div class="action 12u$ align-center news-more">
+				<a class="button special" id="addMoreItems">БОЛЬШЕ РАБОТ</a>
+			</div>
 		</section>
 		<hr class="trans" />
 
