--- a/index.html
+++ b/index.html
@@ -345,6 +345,10 @@
 						</div>
 					</div>
 				</div>
+
+				<div class="action 12u$ align-center news-more">
+					<a class="button special" id="addMoreItems">ВСЕ НОВОСТИ</a>
+				</div>
 			</section>
 
 			<hr class="trans" />
