Доработки по галерее проектов

--- a/project.html
+++ b/project.html
@@ -376,7 +376,7 @@
 		</footer>
 
 <!-- Модалка -->
-<div style="display: none;" class="b-main-modal" id="project1">
+<!-- <div style="display: none;" class="b-main-modal" id="project1">
 	<div class="main-modal-inner">
 		<div class="content">
 			<img src="images/test_high.jpg">
@@ -401,7 +401,7 @@
 			<img src="images/project/arrow-2.svg" class="icon" id="prev">
 		</div>
 	</div>
-</div>
+</div> -->
 
 <!-- MAINJS -->
 <script src="assets/js/main.js"></script>
